--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\Numero.cs" />
      <Compile Include="Assets\Scripts\Player\Player.cs" />
      <Compile Include="Assets\Scripts\Score.cs" />
+     <Compile Include="Assets\Scripts\Stages\LoadingScene.cs" />
      <Compile Include="Assets\Scripts\Stages\StagesMenu.cs" />
      <Compile Include="Assets\Scripts\Touch\Controles.cs" />
      <Compile Include="Assets\Scripts\Touch\TouchLogic.cs" />
